--- a/assets/css/styles_boutique.css
+++ b/assets/css/styles_boutique.css
@@ -3,7 +3,6 @@
 #Boutique {
     margin: 2% auto;
     display: block;
-    margin-left: 120px;
     margin-right: 120px;
 }
 
